Fix deviations found in a fresh audit against spring-ai-agentx-main
Ran four independent research passes re-comparing this session's six
tickets against the reference, specifically checking for gaps the earlier
per-ticket research missed. Fixed what was real:

Cross-instance registration was never actually enforced (#11/#12, the
significant one). The original research for both tickets only checked
spring-ai-agentx-core; AGENTS.md names two more sources (dodo-agent,
dodo-agentx) that got skipped. dodo-agent's own AgentTaskManager wires
Redis directly into task registration -- mine didn't. RedisTaskLock (#11)
and RedisInterruptBroadcaster (#12) were built and thoroughly tested as
standalone primitives, but AgentTaskManager.registerTask still only did a
local putIfAbsent: two instances could both admit and run the same
conversationId simultaneously, which is exactly the failure #11 was
supposed to prevent. registerTask now tries the Redis lock after local
admission and rolls back the local entry on rejection; stopLocalTask and
removeTask now release it. Proved with a real Testcontainers test: two
instances, two separate RedissonClient connections, only one admits.
Deliberately not adding periodic TTL renewal in this pass -- that needs a
scheduler and lifecycle of its own, documented in AgentTaskManager's
javadoc as a known follow-up rather than silently gold-plated in.

ToolSearch (#6): ToolCatalog.of() built its name-to-tool map via
Collectors.toMap's default HashMap then Map.copyOf -- which deliberately
randomizes iteration order per JVM run, unlike the reference's
LinkedHashMap. Search-result tie-breaks were non-reproducible across
restarts. Switched to LinkedHashMap. Also: query tokenization only ran the
plain word-boundary splitter, never the camelCase/snake_case splitter used
for indexing tool names, so a query like "slackMessage" couldn't match a
tool indexed as ["slack","message"] tokens the way the reference's dual
tokenization does. Now tokenizes queries both